# type9

./: Dockerfile  README.md  build.sh  pyproject.toml  setup.py
hooks/pre_build/: wheel.sh
src/type9/: cli.py
tests/: test_type9.py
type9/: __init__.py
